# tensorflow

./: .arcconfig  .arclint  .bazelignore  .bazelrc  .bazelrc.asan  .bazelversion  .clang-format  .coveragerc  .cproject  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .mention-bot  .pre-commit-config.yaml  .project  .pylintrc  .python-version  .pyup.yml  .reviewboardrc  .taskcluster.yml  .travis.yml  .travis_install.sh  .zenodo.json  0kdtxfju.l0c.txt  ABOUT ME  ACKNOWLEDGMENTS  ADOPTERS.md  AUTHORS  BUGS_INTRODUCED.md  BUILD  BUILD.sysroot  BUTTERFLY.md  Brewfile  CHANGELOG.md  CHANGES.md  CITATION.cff  CMakeLists.txt  (+241 more)
componentA/: .pylintrc  pyproject.toml
componentA/.cicd/: codefresh.yml  trigger.yaml
componentA/component/: __main__.py
examples/Linalg/: CMakeLists.txt
examples/toy/: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/AffineOps/: AffineOps.cpp  CMakeLists.txt  DialectRegistration.cpp
lib/Analysis/: AffineAnalysis.cpp  AffineStructures.cpp  CMakeLists.txt  CallGraph.cpp  Dominance.cpp  HyperRectangularSet.cpp  LoopAnalysis.cpp  MLFunctionMatcher.cpp  MemRefBoundCheck.cpp  MemRefDependenceCheck.cpp  NestedMatcher.cpp  OpStats.cpp  ParallelismDetection.cpp  Pass.cpp  SliceAnalysis.cpp  TestMemRefDependenceCheck.cpp  TestParallelismDetection.cpp  Utils.cpp  VectorAnalysis.cpp  Verifier.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt  Traits.cpp
lib/EDSC/: Builders.cpp  CMakeLists.txt  CoreAPIs.cpp  Helpers.cpp  Intrinsics.cpp  LowerEDSCTestPass.cpp  MLIREmitter.cpp  Types.cpp
lib/ExecutionEngine/: CMakeLists.txt  ExecutionEngine.cpp  MemRefUtils.cpp  OptUtils.cpp
lib/FxpMathOps/: CMakeLists.txt
lib/GPU/: CMakeLists.txt
lib/IR/: AffineExpr.cpp  AffineExprDetail.h  AffineMap.cpp  AffineMapDetail.h  AffineStructures.cpp  AsmPrinter.cpp  AttributeDetail.h  AttributeListStorage.h  Attributes.cpp  BasicBlock.cpp  Block.cpp  Builders.cpp  BuiltinOps.cpp  CMakeLists.txt  Diagnostics.cpp  Dialect.cpp  Function.cpp  FunctionSupport.cpp  Instruction.cpp  Instructions.cpp  IntegerSet.cpp  IntegerSetDetail.h  Location.cpp  LocationDetail.h  MLIRContext.cpp  MLStatements.cpp  Module.cpp  Operation.cpp  OperationSet.cpp  OperationSupport.cpp  Pass.cpp  PatternMatch.cpp  Region.cpp  SDBM.cpp  SDBMExpr.cpp  SDBMExprDetail.h  SSAValue.cpp  StandardOps.cpp  StandardTypes.cpp  Statement.cpp  (+7 more)
lib/LLVMIR/: CMakeLists.txt
lib/Linalg/: CMakeLists.txt  LinalgOps.cpp  LinalgRegistration.cpp  LinalgTypes.cpp
lib/Parser/: Lexer.cpp  Lexer.h  Parser.cpp  Token.cpp  Token.h  TokenKinds.def
lib/Pass/: CMakeLists.txt  IRPrinting.cpp  Pass.cpp  PassDetail.h  PassManagerOptions.cpp  PassRegistry.cpp  PassTiming.cpp
lib/Quantization/: CMakeLists.txt
lib/Quantizer/: CMakeLists.txt
lib/SDBM/: SDBM.cpp  SDBMExpr.cpp  SDBMExprDetail.h
lib/SPIRV/: CMakeLists.txt  DialectRegistration.cpp  SPIRVDialect.cpp  SPIRVOps.cpp  SPIRVTypes.cpp
lib/StandardOps/: DialectRegistration.cpp  OpRegistration.cpp  Ops.cpp  StandardOpRegistration.cpp  StandardOps.cpp
lib/SuperVectorOps/: DialectRegistration.cpp  SuperVectorOps.cpp
lib/Support/: CMakeLists.txt  FileUtilities.cpp  JitRunner.cpp  MlirOptMain.cpp  StorageUniquer.cpp  TranslateClParser.cpp  TypeUtilities.cpp
lib/TableGen/: Argument.cpp  Attribute.cpp  CMakeLists.txt  Constraint.cpp  Dialect.cpp  Format.cpp  OpTrait.cpp  Operator.cpp  Pattern.cpp  Predicate.cpp  Type.cpp
lib/Transforms/: AffineDataCopyGeneration.cpp  CFGFunctionViewGraph.cpp  CMakeLists.txt  CSE.cpp  Canonicalizer.cpp  ComposeAffineMaps.cpp  ConstantFold.cpp  ConvertToCFG.cpp  Deaffinator.cpp  DialectConversion.cpp  DmaGeneration.cpp  GreedyPatternRewriteDriver.cpp  Inliner.cpp  LoopFusion.cpp  LoopInvariantCodeMotion.cpp  LoopParametricTiling.cpp  LoopTiling.cpp  LoopUnroll.cpp  LoopUnrollAndJam.cpp  LoopUnrollJam.cpp  LoopUtils.cpp  LowerAffine.cpp  LowerAffineApply.cpp  LowerIfAndFor.cpp  LowerVectorTransfers.cpp  MaterializeVectors.cpp  MemRefDataFlowOpt.cpp  Pass.cpp  PatternMatch.cpp  PipelineDataTransfer.cpp  SimplifyAffineExpr.cpp  SimplifyAffineStructures.cpp  StripDebugInfo.cpp  TestConstantFold.cpp  TestLoopFusion.cpp  Utils.cpp  Vectorize.cpp  ViewFunctionGraph.cpp  ViewOpGraph.cpp  ViewRegionGraph.cpp
lib/Translation/: Translation.cpp
lib/VectorOps/: CMakeLists.txt  VectorOps.cpp
tensorflow/go/: .gitignore  BUILD  BUILD.bazel  OPTIMIZATIONS.md  README.md  android.go  attr_value.pb.go  attrs.go  attrs_test.go  config.go  config.pb.go  context.go  context_test.go  doc.go  example_inception_inference_test.go  function.pb.go  gen.go  gpu.go  gpu_options.go  gpu_options_test.go  graph.go  graph.pb.go  graph_test.go  kernel_def.pb.go  lib.go  op_def.pb.go  operation.go  operation_test.go  optimization.go  performance_test.go  saved_model.go  saved_model_test.go  session.cpp  session.go  session_config.go  session_config_test.go  session_ext.go  session_test.go  shape.go  shape_test.go  (+24 more)
tensorflow/lite/: BUILD  CMakeLists.txt  CMakePresets.json  README.md  SKILL.md  allocation.cc  allocation.h  allocation_test.cc  api_visibility.bzl  arena_planner.cc  arena_planner.h  arena_planner_subgraph_test.cc  arena_planner_test.cc  array.cc  array.h  array_test.cc  build_def.bzl  builtin_op_data.h  builtin_ops.h  context.h  context_util.h  create_op_resolver.h  create_op_resolver_with_builtin_ops.cc  create_op_resolver_with_selected_ops.cc  error_reporter.h  external_cpu_backend_context.cc  external_cpu_backend_context.h  generate-pc.sh  graph_info.cc  graph_info.h  graph_info_test.cc  interpreter.cc  interpreter.h  interpreter_builder.cc  interpreter_builder.h  interpreter_builder_experimental.cc  interpreter_experimental.cc  interpreter_options.h  interpreter_test.cc  interpreter_test.h  (+73 more)
test/EDSC/: CMakeLists.txt  api-test.cpp  builder-api-test.cpp  for-loops.mlir  lower-edsc.mlir
test/SDBM/: CMakeLists.txt  lit.local.cfg  sdbm-api-test.cpp
test/TestDialect/: CMakeLists.txt  TestDialect.cpp  TestDialect.h  TestOps.td  (+1 more)
unittests/: CMakeLists.txt
untitled/: CMakeLists.txt  main.cpp
(+61983 files in other folders)
